src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__field_set.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
let a = {foo:0}
a.foo = 1
}

OK
.fn @main
  params 0
  stack 3
  .locals
    a = r1
  .code
  0  ltable r1, 1
  1  lsmi r2, 0
  2  skeyc r1, "foo", r2
  3  lsmi r2, 1
  4  skeyc r1, "foo", r2
  5  lnil r0
  6  ret
