src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__field_set_to_expr.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
OK
.fn @main
  params 0
  stack 4
  .locals
    a = r1
    v = r2
  .code
  0  ltable r1, 1
  1  lsmi r2, 0
  2  skeyc r1, "foo", r2
  3  lsmi r2, 1
  4  add r3, r2, r2
  5  skeyc r1, "foo", r3
  6  ret
