src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__field_set_to_var.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
let a = {foo:0}
let v = 1
a.foo = v



OK
.fn @main
  params 0
  stack 3
  .locals
    a = r1
    v = r2
  .code
  0  ltable r1, 1
  1  lsmi r2, 0
  2  skeyc r1, "foo", r2
  3  lsmi r2, 1
  4  skeyc r1, "foo", r2
  5  ret
