src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__for_range_control_immutable_assign_op.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
// Control variable should be immutable (compound assignment)
for i in 0..10 {
  i += 1
}
}

ERROR
cannot assign to immutable binding
4 |    i += 1
  |    ^^^^^^
